Change VS2003 and VS2005 theme localize for Chinese.

--- a/WinFormsUI/ThemeVS2005.csproj
+++ b/WinFormsUI/ThemeVS2005.csproj
@@ -97,6 +97,7 @@
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="ThemeVS2005\Strings.zh-Hans.resx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ThemeVS2005\Resources\DockIndicator_PaneDiamond.png" />
