--- a/WinFormsUI/ThemeVS2003.csproj
+++ b/WinFormsUI/ThemeVS2003.csproj
@@ -94,6 +94,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="ThemeVS2003\Strings.zh-Hans.resx" />
     <EmbeddedResource Include="ThemeVS2005\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
