Add vs2013 and vs2015 Chinese language. add test code.

--- a/WinFormsUI/ThemeVS2013.csproj
+++ b/WinFormsUI/ThemeVS2013.csproj
@@ -126,6 +126,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="ThemeVS2012\Strings.zh-Hans.resx" />
     <EmbeddedResource Include="ThemeVS2013\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
